removed text-stroke from portfolio --- causing bugs on mobile

--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -27,7 +27,6 @@
   transition: -webkit-transform ease 500ms;
   transition: transform ease 500ms;
   text-shadow: 2px 2px 2px black;
-  -webkit-text-stroke: 0.1px rgb(220, 255, 255);
 }
 
 .front {
