--- a/src/pages/Portfolio.module.css
+++ b/src/pages/Portfolio.module.css
@@ -15,7 +15,6 @@
   box-shadow: 3px 3px 3px rgb(95, 77, 99);
   border-radius: 10px;
   text-shadow: 1px 1px 2px black;
-  -webkit-text-stroke: 0.1px rgb(220, 255, 255);
 }
 
 .card-container {
